# run

./: .gitbook.yaml  .gitignore  .prettierignore  Cargo.toml  ideas.md  it_should_support_configuring_workdir_from_run_block.toml  license.md  package-lock.json  package.json  prettier.config.cjs  readme.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
ci/: .goreleaser.yaml  go.mod  postbuild  postbuild.sh
docs/: .gitbook.yaml  alternatives.md  contributing.md  installation.md  readme.md  summary.md
docs/examples/: readme.md
docs/getting-started/: first-steps.md  moving-forward.md  using-config-file.md  using-the-shell.md  your-first-runfile.md
docs/user-guide/: configuration.md  introduction.md  literate.md  modes.md  node-developer.md  processors.md  run-for-go-developers.md  run-for-nodejs-developers.md  run-for-rust-developers.md  runfile.md  rust-developer.md  tagging.md
examples/: examples.rs  readme.md
examples/cargo-run/: workbench.toml
examples/go-developer/: run.toml.md
examples/mode-parallel/: run.toml  workbench.toml  workbench.toml.stdout
examples/mode-sequential/: run.toml  workbench.toml  workbench.toml.stdout
examples/mode-tmux/: run.toml  workbench.toml
examples/nodejs-redis/: index.js  package-lock.json  package.json  run.toml  workbench.toml
examples/parallel/: workbench.toml
examples/rust-project/: run.toml.md
examples/sequential/: workbench.toml
examples/signal-propagation/: run.toml  workbench.toml
examples/tmux/: workbench.toml
scripts/: release
src/: cli.rs  config.rs  executor.rs  main.rs  pipeline.rs  runner.rs  selector.rs  watcher.rs
src/processors/: mod.rs  openai.rs  prefix.rs
tests/: cli.rs  it_should_run_sequentially_by_default.toml  tests.rs
tests/--check/: it_should_fail_on_invalid_config.toml  it_should_fail_on_invalid_config.toml.args  it_should_fail_on_invalid_config.toml.stderr  it_should_take_precedence_over_run.toml  it_should_take_precedence_over_run.toml.args
tests/--print-config/: it_should_print_config.toml  it_should_print_config.toml.args  it_should_print_config.toml.stdout
tests/config/: it_should_allow_missing_optional_fields_in_tmux_block.toml  it_should_allow_missing_optional_fields_in_tmux_block.toml.stdout  it_should_err_on_empty_file.toml.stderr  it_should_err_on_unknown_keys.toml  it_should_err_on_unknown_keys.toml.stderr  it_should_err_without_runs.toml  it_should_err_without_runs.toml.stderr
tests/env/: it_should_respect_priority1_for_cli_args.toml  it_should_respect_priority1_for_cli_args.toml.stdout  it_should_respect_priority2_for_run_block.toml  it_should_respect_priority2_for_run_block.toml.stdout  it_should_respect_priority3_for_main_block.toml  it_should_respect_priority3_for_main_block.toml.stdout  it_should_support_receiving_env_from_cli_args.toml  it_should_support_receiving_env_from_cli_args.toml.args  it_should_support_receiving_env_from_cli_args.toml.stdout  it_should_support_receiving_env_from_main_block.toml  it_should_support_receiving_env_from_main_block.toml.stdout  it_should_support_receiving_env_from_run_block.toml  it_should_use_cli_args_over_main_block.toml  it_should_use_cli_args_over_main_block.toml.stdout  it_should_use_run_block_over_cli_args.toml  it_should_use_run_block_over_cli_args.toml.args  it_should_use_run_block_over_cli_args.toml.stdout  (+2 more)
workbench/: Cargo.toml
workbench-cli/: Cargo.toml
workbench-cli/src/: main.rs
(+65 files in other folders)
