[package]
name = "run"
version = "0.1.0"
authors = ["Aymeric Beaumet <hi@aymericbeaumet.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
clap = { version = "4.2.1", features = ["derive", "env"] }
futures = "0.3.28"
merge = "0.1.0"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
shell-words = "1.1.0"
textwrap = "0.16.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "fs", "process"] }
toml = "0.7.3"

[dev-dependencies]
assert_cmd = "2.0.10"
glob = "0.3.1"
pretty_assertions = "1.3.0"

[profile.dev]
opt-level = 0

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
